Generalized Target Predictor, + added range to entities